--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,7 +1,7 @@
 # Nome do Workflow
 name: DevOpsLab Pipeline
 
-# Evento que irá acionar a pipeline
+# Evento que irá acionar a pipeline mauro
 on: 
   push:
     branches:
